--- a/src/layouts/header-layout.html
+++ b/src/layouts/header-layout.html
@@ -15,6 +15,28 @@
             </a>
           </li>
         </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item ${activeRoute === 'login' ? ' active' : ''}"
+              show.bind="!sessionService.isAuthenticated">
+            <a class="nav-link" route-href="route: login">
+              Sign in&nbsp;
+              <i class="fa fa-sign-in"></i>
+            </a>
+          </li>
+          <li class="nav-item ${activeRoute === 'register' ? ' active' : ''}"
+              show.bind="!sessionService.isAuthenticated">
+            <a class="nav-link" route-href="route: register">
+              Sign up&nbsp;
+              <i class="fa fa-angle-double-right"></i>
+            </a>
+          </li>
+          <li class="nav-item" if.bind="sessionService.isAuthenticated">
+            <span class="nav-link">
+              ${sessionService.currentUser.username}&nbsp;
+              <i class="fa fa-user"></i>
+            </span>
+          </li>
+        </ul>
       </div>
     </div>
   </nav>
