--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,6 +1,7 @@
 @import 'variables';
 @import 'common';
 @import 'home';
+@import 'profile';
 
 .navbar-nav .active > .nav-link {
   border-bottom: 0.1rem solid transparent;
