--- a/src/layouts/header-layout.html
+++ b/src/layouts/header-layout.html
@@ -14,6 +14,13 @@
               Home
             </a>
           </li>
+          <li class="${'nav-item' + (activeRoute === 'editor' ? ' active' : '')}"
+              show.bind="sessionService.isAuthenticated">
+            <a class="nav-link" route-href="route: editor">
+              <i class="fa fa-pencil-square-o"></i>
+              &nbsp;New Article
+            </a>
+          </li>
         </ul>
         <ul class="navbar-nav">
           <li class="nav-item ${activeRoute === 'login' ? ' active' : ''}"
