--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -13,3 +13,35 @@
 .container.page {
   margin-top: 1.5rem;
 }
+
+.article-meta {
+  display: block;
+  position: relative;
+  font-weight: 300;
+
+  img {
+    display: inline-block;
+    vertical-align: middle;
+    height: 32px;
+    width: 32px;
+    border-radius: 30px;
+  }
+
+  .info {
+    margin:0 1.5rem 0 0.3rem;
+    display: inline-block;
+    vertical-align: middle;
+    line-height: 1rem;
+
+    .author {
+      display: block;
+      font-weight: 500 !important;
+    }
+
+    .date {
+      color: #bbb;
+      font-size: 0.8rem;
+      display: block;
+    }
+  }
+}
