--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -2,6 +2,7 @@
 @import 'common';
 @import 'home';
 @import 'profile';
+@import 'article';
 
 .navbar-nav .active > .nav-link {
   border-bottom: 0.1rem solid transparent;
