--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -20,4 +20,47 @@
       margin-bottom: 0;
     }
   }
+
+  .feed-toggle {
+    margin-bottom: -1px;
+  }
+}
+
+.article-preview {
+  border-top: 1px solid rgba($black, 0.1);
+  padding: 1.5rem 0;
+
+  .article-meta {
+    margin: 0 0 1rem 0;
+  }
+
+  .preview-link {
+    color: inherit !important;
+
+    &:hover {
+      text-decoration: inherit !important;
+    }
+
+    h1 {
+      font-weight: 600 !important;
+      font-size: 1.5rem !important;
+      margin-bottom: 3px;
+    }
+
+    p {
+      font-weight: 300;
+      color: #999;
+      margin-bottom: 15px;
+      font-size: 1rem;
+      line-height: 1.3rem;
+    }
+
+    span {
+      max-width: 30%;
+      font-size: 0.8rem;
+      font-weight: 300;
+      color: #bbb;
+      vertical-align: middle;
+    }
+  }
 }
