Add user articles lists to profile view

--- a/src/styles/_profile.scss
+++ b/src/styles/_profile.scss
@@ -15,6 +15,10 @@
       font-weight: 300;
     }
   }
+
+  .articles-toggle {
+    margin: 1.5rem 0 -1px 0;
+  }
 }
 
 .profile-page, .settings-page {
